simple/test/features/errors/semantic/e1026_unknown_assoc_type.spl
# E1026: Unknown Associated Type

Feature: E1026 - Associated Type Not Declared in Trait
  As a Simple compiler
  I want to detect unknown associated types in trait implementations
  So that only declared associated types are used

  Background:
    Given I have the Simple compiler
    And the compiler supports associated types

  Scenario: Using undeclared associated type in impl
    When I compile:
      '''
      trait Container:
        type Item

      struct MyVec<T>:
        data: [T]

      impl<T> Container for MyVec<T>:
        type Item = T  # OK
        type Extra = i32  # Error: Extra not in trait
      '''
    Then I should see error E1026 at line 9
    And the error message should be "associated type `{name}` not declared in trait `{trait_name}`"
    And the label should indicate "not a member of this trait"
    And the help should suggest "check the trait definition for available associated types"

  Scenario: Typo in associated type name
    When I compile:
      '''
      trait Iterator:
        type Item

      struct Counter:
        count: i32

      impl Iterator for Counter:
        type Itme = i32  # Error: typo - Itme vs Item
      '''
    Then I should see error E1026

  Scenario: Valid associated type implementation
    When I compile:
      '''
      trait Iterator:
        type Item

      struct Counter:
        count: i32

      impl Iterator for Counter:
        type Item = i32  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      trait Container:
        type Item

      impl Container for MyVec:
        type Unknown = i32
      '''
    Then I should see error E1026
    And the error message should contain "알 수 없는 연관 타입"
